# prog2hw

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
doc/: .~lock.documentation.docx#  .~lock.initial_specification.docx#  file_structure.txt  help.txt  how_does_bmp_work.txt  initial_specification.docx  initial_specification_weblink.txt  todo.txt
include/ImageFiltering/: ImageFiltering.hpp
include/core/: Picture.hpp  Pixel.hpp
include/imgfilt/filters/: ContrastFilter.hpp  IFilter.hpp  imgfilt.hpp
src/: plan.cpp
